Closed
Bug 237067
Opened 22 years ago
Closed 22 years ago
Solaris (forte) build is broken since nsTablePainter.h landing
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: yuanyi21, Assigned: fantasai.bugs)
Details
Attachments
(1 file)
|
608 bytes,
patch
|
dbaron
:
review+
dbaron
:
superreview+
dbaron
:
approval1.7b+
|
Details | Diff | Splinter Review |
when compiling nsCSSFrameConstructor.cpp, it says:
"./../../table/src/nsTablePainter.h", line 241: Error:
TableBackgroundPainter::TableBackgroundData is not accessible from
TableBackgroundPainter::ColData.
"./../../table/src/nsTablePainter.h", line 242: Error:
TableBackgroundPainter::TableBackgroundData is not accessible from
TableBackgroundPainter::ColData."
Comment 1•22 years ago
|
||
Kyle, does adding
struct ColData;
friend struct ColData;
on line 240 of nsTablePainter.h help?
If not, does adding that and making TableBackgroundData protected instead of
private help?
Attachment #143556 -
Flags: superreview+
Attachment #143556 -
Flags: review+
Attachment #143556 -
Flags: approval1.7b+
checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•