Bug 237067 Solaris (forte) build is broken since nsTablePainter.h landing r/sr/a=dbaron Fix the bustage on Solaris.